# Real-Time-Fraud-Detection-System

./: README.md  app.py  pyproject.toml  sample_transactions.csv
attached_assets/: Pasted-User-Interface-Overview-The-dashboard-is-designed-to-provide-an-intuitive-real-time-view-of-fraud-d-1741933602065.txt
utils/: __init__.py  data_processor.py  risk_models.py  visualization.py
